[BACKLOG-41002] remove --add-opens for java.lang.Object